@startuml 电商平台UML类图（简化）

skinparam classAttributeIconSize 0
skinparam packageStyle rectangle

package "表示层 Controller" {
  class AuthController
  class ProductController
  class CartController
  class OrderController
  class ReviewController
  class AdminController
  class GlobalExceptionHandler
}

package "业务逻辑层 Service" {
  class AuthService
  class ProductService
  class CategoryService
  class CartService
  class OrderService
  class ReviewService
  class AdminService
}

package "数据访问层 Mapper" {
  interface UserMapper
  interface ProductMapper
  interface CategoryMapper
  interface CartItemMapper
  interface OrderMainMapper
  interface OrderItemMapper
  interface ReviewMapper
}

package "实体层 Entity" {
  class User
  class Category
  class Product
  class CartItem
  class OrderMain
  class OrderItem
  class Review
}

package "DTO / 通用" {
  class Result<T>
  class LoginRequest
  class RegisterRequest
  class OrderCreateRequest
  class UserVO
  class CartItemVO
  class ReviewVO
}

AuthController --> AuthService : 调用
ProductController --> ProductService : 调用
ProductController --> CategoryService : 调用
CartController --> CartService : 调用
OrderController --> OrderService : 调用
ReviewController --> ReviewService : 调用
AdminController --> AdminService : 调用

AuthService --> UserMapper : 使用
AuthService --> JwtService : 使用
CartService --> CartItemMapper : 使用
CartService --> ProductMapper : 使用
OrderService --> OrderMainMapper : 使用
OrderService --> OrderItemMapper : 使用
OrderService --> CartItemMapper : 使用
OrderService --> ProductMapper : 使用
ProductService --> ProductMapper : 使用
CategoryService --> CategoryMapper : 使用
ReviewService --> ReviewMapper : 使用
AdminService --> UserMapper : 使用
AdminService --> ReviewMapper : 使用

UserMapper ..> User : 映射
ProductMapper ..> Product : 映射
CategoryMapper ..> Category : 映射
CartItemMapper ..> CartItem : 映射
OrderMainMapper ..> OrderMain : 映射
OrderItemMapper ..> OrderItem : 映射
ReviewMapper ..> Review : 映射

AuthController ..> LoginRequest : 入参
AuthController ..> RegisterRequest : 入参
AuthController ..> UserVO : 返回
OrderController ..> OrderCreateRequest : 入参
OrderController ..> OrderMain : 返回
CartController ..> CartItemVO : 返回

@enduml
